@@ -27,7 +27,7 @@ public class InMemoryItemRepository {
     }
 
     public List<Item> searchByText(String text) {
-        if (text == null || text.trim().isEmpty()) {
+        if (text == null || text.isBlank()) {
             return List.of();
         }
 
